sfa-dms/force-app/main/default/objects/Expense_Policy__mdt/Expense_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Expense Policy</label>
    <pluralLabel>Expense Policies</pluralLabel>
</CustomObject>