sfa-dms/force-app/main/default/objects/Expense_Policy__mdt/fields/Daily_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Cap__c</fullName>
    <label>Daily Cap</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>