sfa-dms/force-app/main/default/objects/Expense_Policy__mdt/fields/Default_DA_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_DA_Amount__c</fullName>
    <label>Default DA Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>