sfa-dms/force-app/main/default/objects/Expense_Policy__mdt/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>