sfa-dms/force-app/main/default/objects/Expense_Policy__mdt/fields/Requires_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Requires_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Receipt</label>
    <type>Checkbox</type>
</CustomField>